# StringEvaluation

./: CMakeCache.txt  CMakeLists.txt  CocCoc.cbp  Makefile  README.md  StringEvaluation  StringEvaluation.cbp  cmake_install.cmake  main.cpp  mainClient.cpp  mainServer.cpp
common/: DataFactory.cpp  EventManager.cpp  FileDescriptor.cpp  Math.cpp  Socket.cpp  TcpClient.cpp  TcpServer.cpp  ThreadPool.cpp
include/: BufferedDataReader.h  CallBack.h  DataFactory.h  Epoll.h  Evaluation.h  Event.h  EventManager.h  Expression.h  FileDescriptor.h  Math.h  Message.h  Opt.h  Socket.h  StringBuilder.h  Strings.h  TcpClient.h  TcpServer.h  ThreadPool.h  Utils.h
src/common/: EventManager.cpp  FileDescriptor.cpp  Socket.cpp  ThreadPool.cpp
src/factory/: DataFactory.cpp
src/math/: Evaluation.cpp  Expression.cpp  Math.cpp
src/server/: TcpClient.cpp  TcpServer.cpp
